[project]
name = "lgcns-is-the-best"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hwlee-ds", email = "funtaland@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
]
